hotfix: purple cta and avoiding invisible text

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -102,7 +102,7 @@ h2 {
   font-weight: 500;
 }
 
-.text-form-subheading {
+.text-form-subheading-white {
   color: #ffffff;
   font-size: 0.875rem; /* 16px */
   font-weight: 350;
@@ -211,7 +211,7 @@ h4 {
 }
 
 .primary-action-button {
-  background: #B5C7FE;
+  background: #A100FF;
   opacity: 1;
   color: #ffffff;
   /* font-size: 1rem; */
@@ -219,8 +219,18 @@ h4 {
   border-radius: 0.75rem;
 }
 
+.primary-action-button:disabled {
+  background: #797979;
+}
 .primary-action-button:hover {
-  background: #6675a3;
+  background: #6900a6;
+}
+
+.primary-action-button:disabled {
+  background: #a7a7a7;
+}
+.primary-action-button:disabled:hover {
+  background: #a7a7a7;
 }
 
 .secondary-action-button {
@@ -252,7 +262,7 @@ h4 {
 }
 
 .selector-button {
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.4);
   border: 1px solid #e5e7eb;
   color: #111213;
 }
